--- a/index.html
+++ b/index.html
@@ -2167,6 +2167,7 @@
                     if ( !isNaN( amnt_or_check ) ) {
                         amnt_or_check = Number( amnt_or_check );
                         hedgehog_client.prepToReceiveLNPartOne( chan_id, amnt_or_check );
+                        return;
                     }
                     url_params.check = amnt_or_check.substring( amnt_or_check.indexOf( "#check=" ) + 7 );
                     var skip_show = true;
