--- a/index.html
+++ b/index.html
@@ -2974,7 +2974,7 @@
                         <p>Enter an amount in sats</p>
                         <p><input class="new_check_amount" type="number" min="2000" step="1" placeholder="2000"></p>
                         <p class="channel_fee_info"><input type="checkbox" class="include_channel_fee" id="include_channel_fee"> <label for="include_channel_fee">Include channel fee</label>
-                        <p>If a channel fee is included, an extra payment of 1000 sats will be added to your check to pay for a new channel for your recipient, if necessary. The channel fee has to be a separate payment to reduce trust in the server: the channel fee goes to the server, not the recipient, so the server can steal it. But he promises not to, and in fact he promises to refund the unused portion of the channel fee.</p>
+                        <p>If a channel fee is included, an extra payment of 1000 sats will be added to your cheque to pay for a new channel for your recipient, if necessary. The channel fee has to be a separate payment to reduce trust in the server: the channel fee goes to the server, not the recipient, so the server can steal it. But he promises not to, and in fact he promises to refund the unused portion of the channel fee.</p>
                         <p><button class="submit_new_check">Submit</button></p>
                     `;
                     showModal( new_check_html );
